--- a/client/.gitignore
+++ b/client/.gitignore
@@ -7,10 +7,20 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-ssr
 *.local
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +32,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Runtime and cache
+.cache
+.parcel-cache
+.tmp
+.temp
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+.Spotlight-V100
+.Trashes
